eksbedrock/kubernetes/ingress/bedrockragdeployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bedrockragapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bedrockrag
  template:
    metadata:
      labels:
        app: bedrockrag
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: bedrockrag
          image: 575481363195.dkr.ecr.us-east-2.amazonaws.com/bedrockragrepo:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
