eksbedrock/kubernetes/ingress/bedrockragservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: bedrockragservice
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: bedrockrag
