eksbedrock/kubernetes/ingress/chatservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatservice
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8501
  selector:
    app: chatapp
