eksbedrock/kubernetes/ingress/bedrockragingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bedrockrag-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
        - path: /bedrockrag
          pathType: Prefix  # Required field
          backend:
            service:
              name: bedrockragservice  # Correct field
              port:
                number: 8080  # Correct field
